<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>info_tracker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lowellausen@todo.todo">lowellausen</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>neo_simulation2</build_depend>
  <build_depend>neo_local_planner2</build_depend>
  <build_depend>nav2_bringup</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>action_msgs</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
